Draft layout and content

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">h1.title</h1>
+                <h1 class="title">Catherine Olsson</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="#">About Me</a></li>
+                        <li><a href="#">CV</a></li>
                     </ul>
                 </nav>
             </header>
@@ -30,29 +29,58 @@
         <div class="main-container">
             <div class="main wrapper clearfix">
 
-                <article>
-                    <header>
-                        <h1>article header h1</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-                    </header>
-                    <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-                    </section>
-                    <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-                    </section>
-                    <footer>
-                        <h3>article footer h3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-                    </footer>
-                </article>
-
                 <aside>
-                    <h3>aside</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
+				    <p><h2>Catherine Olsson</h2></p>
+					<p><img class='profile-pic' src='pics/self_tree_2_square.jpg'></p>
+					<p>
+					  <a href="https://github.com/catherio">Github</a> / 
+					  <a href="https://www.linkedin.com/in/catherineolsson">Linkedin</a> / 
+					  <a href="https://scholar.google.com/citations?user=TvdMDhwAAAAJ">Scholar</a></p>
+                    <p><h4>Current</h4>: PhD student in computational neuroscience. Winawerlab@NYU.</p>
+					<p><h4>Past</h4>: Computer Science and Cognitive Science @ MIT (B.S. and M.Eng).</p>
+					<p><h4>Contact</h4>: catherio@{mit.edu,nyu.edu}. NYU Center for Neural Science</p>
                 </aside>
+
+
+                <article>
+                    <section>
+                        <h2>About Me</h2>
+                        <p> Name. What I like to do.
+Vision, fMRI, modeling. Programming, teaching, outreach. What I did before...  Software engineering, machine learning, experimental psychology. Focal points of my work? Brief overview of coursework</p>
+                    </section>
+
+                    <section>
+                        <h2>Projects</h2>
+                        <ul>
+						  <li><h4>Models of human vision</h4> Winawerlab project</li>
+						  <li><h4>Reproducibility / Open Science</h4> Etc.</li>
+                          <li><h4>Image synthesis</h4> Eero project</li>
+                          <li><h4>Machine Learning</h4> Deep learning project</li>
+                          <li><h4>Software Development</h4> Amazon: Kindle whispercast. Akamai, BBN Technologies.</li>
+                          <li><h4>Experimental psychology</h4> Laura project</li>
+
+                    </section>
+
+                    <section>
+                        <h2>Teaching</h2>
+                        <p> Mathtools. Girls Who Code, TEALS. Software Carpentry. MIT ESP. </p>
+                    </section>
+
+                        <h2>Personal</h2>
+                        <p> Taiko drumming. Mystery Hunt. Co-op living. Random Hall. Alpha Phi Omega.</p>
+                    </section>
+
+    Teaching/volunteering
+    Outside links
+        Google scholar
+        Github - 
+        LinkedIn - 
+    Personal interests
+        Taiko drumming
+        Mystery Hunt
+    Anonymous Feedback??
+    CV (online CV??)
+                </article>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
@@ -75,7 +103,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            ga('create','UA-73131851-1','auto');ga('send','pageview');
         </script>
     </body>
 </html>
