New colors, and more content

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
                 <h1 class="title">Catherine Olsson</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">About Me</a></li>
-                        <li><a href="#">CV</a></li>
                     </ul>
                 </nav>
             </header>
@@ -30,8 +28,7 @@
             <div class="main wrapper clearfix">
 
                 <aside>
-				    <p><h2>Catherine Olsson</h2></p>
-					<p><img class='profile-pic' src='pics/self_tree_2_square.jpg'></p>
+					<p><a href=pics/self_tree_2_square.jpg><img class='profile-pic' src='pics/self_tree_2_square.jpg'></a></p>
 					<p>
 					  <a href="https://github.com/catherio">Github</a> / 
 					  <a href="https://www.linkedin.com/in/catherineolsson">Linkedin</a> / 
@@ -45,19 +42,20 @@
                 <article>
                     <section>
                         <h2>About Me</h2>
-                        <p> Name. What I like to do.
-Vision, fMRI, modeling. Programming, teaching, outreach. What I did before...  Software engineering, machine learning, experimental psychology. Focal points of my work? Brief overview of coursework</p>
+                        <p>I'm Catherine Olsson: a coder, a scientist, an extrovert, and an idealist. Currently I'm a Ph.D. student in Neural Science at NYU in Jon Winawer's lab, working on computational models of the human visual system (V1-V3) based on fMRI data from human subjects.</p>
+						<p>Previously, I did my undergraduate and master's work at MIT in computer science, with a double major in brain and cognitive science. Before <em>that</em>, I was a high schooler with an interest in programming and philosophy of mind, and dreams of being a scientist.</p> 
                     </section>
 
                     <section>
                         <h2>Projects</h2>
+						A brief overview of some things I've done in the past few years:
                         <ul>
-						  <li><h4>Models of human vision</h4> Winawerlab project</li>
-						  <li><h4>Reproducibility / Open Science</h4> Etc.</li>
-                          <li><h4>Image synthesis</h4> Eero project</li>
-                          <li><h4>Machine Learning</h4> Deep learning project</li>
-                          <li><h4>Software Development</h4> Amazon: Kindle whispercast. Akamai, BBN Technologies.</li>
-                          <li><h4>Experimental psychology</h4> Laura project</li>
+						  <li><h4>Models of human vision:</h4> Ongoing project in the Winawerlab. Interim results presented at VSS 2014 (<a href="http://f1000research.com/posters/1098032">poster</a>)</li>
+						  <li><h4>Reproducibility / Open Science:</h4> Rebecca Saxe. Science 2015. (<a href="file:///home/catherio/Projects/website/catherio-site/pdf/2015-osc-science.pdf">pdf</a>)</li>
+                          <li><h4>Image synthesis:</h4> Eero project. First-year talk.</li>
+                          <li><h4>Machine Learning:</h4> Deep learning project. TODO what?</li>
+                          <li><h4>Software Development:</h4> Amazon: Kindle whispercast. Akamai, BBN Technologies.</li>
+                          <li><h4>Experimental psychology</h4> Laura project on how children isolate variables</li>
 
                     </section>
 
@@ -67,19 +65,9 @@ Vision, fMRI, modeling. Programming, teaching, outreach. What I did before...  S
                     </section>
 
                         <h2>Personal</h2>
+						<p> You can call me "catherio". It rhymes with "cheerio". </p>
                         <p> Taiko drumming. Mystery Hunt. Co-op living. Random Hall. Alpha Phi Omega.</p>
                     </section>
-
-    Teaching/volunteering
-    Outside links
-        Google scholar
-        Github - 
-        LinkedIn - 
-    Personal interests
-        Taiko drumming
-        Mystery Hunt
-    Anonymous Feedback??
-    CV (online CV??)
                 </article>
 
             </div> <!-- #main -->
@@ -87,7 +75,6 @@ Vision, fMRI, modeling. Programming, teaching, outreach. What I did before...  S
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>footer</h3>
             </footer>
         </div>
 
