Fixed path references and centering

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <aside>
 					<p><a href=pics/self_tree_2_square.jpg><img class='profile-pic' src='pics/self_tree_2_square.jpg'></a></p>
 					<p>
-					  <a href="https://github.com/catherio">Github</a> / 
+					  <center><a href="https://github.com/catherio">Github</a> / 
 					  <a href="https://www.linkedin.com/in/catherineolsson">Linkedin</a> / 
-					  <a href="https://scholar.google.com/citations?user=TvdMDhwAAAAJ">Scholar</a></p>
+					  <a href="https://scholar.google.com/citations?user=TvdMDhwAAAAJ">Scholar</a></center></p>
                     <p><h4>Current</h4>: PhD student in computational neuroscience. Winawerlab@NYU.</p>
 					<p><h4>Past</h4>: Computer Science and Cognitive Science @ MIT (B.S. and M.Eng).</p>
 					<p><h4>Contact</h4>: catherio@{mit.edu,nyu.edu}. NYU Center for Neural Science</p>
@@ -51,7 +51,7 @@
 						A brief overview of some things I've done in the past few years:
                         <ul>
 						  <li><h4>Models of human vision:</h4> Ongoing project in the Winawerlab. Interim results presented at VSS 2014 (<a href="http://f1000research.com/posters/1098032">poster</a>)</li>
-						  <li><h4>Reproducibility / Open Science:</h4> Rebecca Saxe. Science 2015. (<a href="file:///home/catherio/Projects/website/catherio-site/pdf/2015-osc-science.pdf">pdf</a>)</li>
+						  <li><h4>Reproducibility / Open Science:</h4> Rebecca Saxe. Science 2015. (<a href="pdf/2015-osc-science.pdf">pdf</a>)</li>
                           <li><h4>Image synthesis:</h4> Eero project. First-year talk.</li>
                           <li><h4>Machine Learning:</h4> Deep learning project. TODO what?</li>
                           <li><h4>Software Development:</h4> Amazon: Kindle whispercast. Akamai, BBN Technologies.</li>
@@ -61,7 +61,7 @@
 
                     <section>
                         <h2>Teaching</h2>
-                        <p> Mathtools. Girls Who Code, TEALS. Software Carpentry. MIT ESP. </p>
+                        <p> Mathtools. Girls Who Code, TEALS. Software Carpentry. MIT ESP. Scheme. </p>
                     </section>
 
                         <h2>Personal</h2>
